# code-wars

Week2/ReturningStrings/: .gitignore  CMakeLists.txt  returningStrings.cpp  returningStrings.hpp
Week2/ReturningStrings/test/: CMakeLists.txt  returningStringsTests.cpp
Week_1/: evenOrOdd.js
